# TMX-Game-Test

./: CMakeLists.txt  README.md  build.bat
include/: Config.h  Game.h  Input.h  TimeManager.h  world.h
include/Rendering/: Renderer.h  Window.h
include/Utils/: errorMsg.h  myrand.h  noise.h
src/: Config.cpp  Game.cpp  Input.cpp  TimeManager.cpp  main.cpp  world.cpp
src/Rendering/: Renderer.cpp  Window.cpp
